--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://bhobserver.github.io/projects/calculator",
+  "homepage": "https://bhobserver.github.io/projects/Math-Magicians",
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.0",
     "big.js": "^6.2.1",
@@ -52,6 +51,7 @@
     "@babel/plugin-transform-private-property-in-object": "^7.22.11",
     "@babel/preset-env": "^7.22.20",
     "@babel/preset-react": "^7.22.15",
+    "@testing-library/react": "^14.0.0",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.28.1",
